fix: cambio de nombre de endpoint a ordenadas udistrital/sisifo_documentacion#335
